--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "@babel/preset-env": "^7.10.0",
     "@babel/preset-react": "^7.10.0",
     "@babel/runtime": "^7.10.0",
-    "@carbon/bundler": "^10.10.0",
-    "@carbon/cli": "^10.16.0",
+    "@carbon/bundler": "workspace:packages/bundler",
+    "@carbon/cli": "workspace:packages/cli",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@testing-library/dom": "^7.26.6",
