--- a/packages/pictograms-react/package.json
+++ b/packages/pictograms-react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/pictograms-react",
   "description": "React components for pictograms in digital and software products using the Carbon Design System",
-  "version": "11.0.0",
+  "version": "11.1.0-rc.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -37,13 +37,13 @@
     "react": ">=16"
   },
   "dependencies": {
-    "@carbon/icon-helpers": "^10.10.0",
+    "@carbon/icon-helpers": "^10.11.0-rc.0",
     "@carbon/telemetry": "^0.0.0-alpha.5",
     "prop-types": "^15.7.2"
   },
   "devDependencies": {
-    "@carbon/icon-build-helpers": "^0.12.0",
-    "@carbon/pictograms": "^11.0.0"
+    "@carbon/icon-build-helpers": "^0.13.0-rc.0",
+    "@carbon/pictograms": "^11.1.0-rc.0"
   },
   "sideEffects": false
 }
