--- a/packages/type/package.json
+++ b/packages/type/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/type",
   "description": "Typography for digital and software products using the Carbon Design System",
-  "version": "10.18.0",
+  "version": "10.19.0-rc.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -37,10 +37,10 @@
   },
   "dependencies": {
     "@carbon/import-once": "^10.4.0",
-    "@carbon/layout": "^10.15.0"
+    "@carbon/layout": "^10.16.0-rc.0"
   },
   "devDependencies": {
-    "@carbon/bundler": "^10.10.0",
+    "@carbon/bundler": "^10.11.0-rc.0",
     "@carbon/test-utils": "^10.13.0",
     "change-case": "^4.1.1",
     "rimraf": "^3.0.0"
