feat(pictograms): add Cloud PAK pictograms to cloud category (#7439)
* add 8 new cloud pak pictograms to cloud category

* chore(pictograms): update snapshots

* fix(pictograms): remove cloud pak for automation asset

Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: Josh Black <josh@josh.black>

--- a/packages/pictograms/categories.yml
+++ b/packages/pictograms/categories.yml
@@ -139,8 +139,15 @@ categories:
       - cloud--strategy
       - cloud--tutorials
       - cloud--vmware
-      - condition--builder
+      - cloud-pak--family
+      - cloud-pak--for-applications
+      - cloud-pak--for-data
+      - cloud-pak--for-integration
+      - cloud-pak--for-multicloud-management
+      - cloud-pak--for-security
+      - cloud-pak--system
       - cognos--analytics
+      - condition--builder
       - construct
       - devops
       - digital
