--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/themes",
   "description": "Themes for applying color in the Carbon Design System",
-  "version": "10.25.0-rc.0",
+  "version": "10.25.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -28,9 +28,9 @@
     "build": "yarn clean && bundler bundle src/index.js --name CarbonThemes && node tasks/build.js && bundler check \"scss/*.scss\" && bundler sassdoc \"scss/**/*.scss\""
   },
   "dependencies": {
-    "@carbon/colors": "^10.18.0-rc.0",
-    "@carbon/layout": "^10.16.0-rc.0",
-    "@carbon/type": "^10.19.0-rc.0",
+    "@carbon/colors": "^10.18.0",
+    "@carbon/layout": "^10.16.0",
+    "@carbon/type": "^10.19.0",
     "color": "^3.1.2"
   },
   "devDependencies": {
