fix(checkbox): fixed the checkbox component bidi layout issue. (#7524) (#7564)
Fixed the tick orientation for checkbox component in bidi(RTL) layout by adding the RTLCSS value directives. (#7524)

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -637,6 +637,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "DavidSCChen",
+      "name": "DavidSCChen",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/54974983?v=4",
+      "profile": "https://github.com/DavidSCChen",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "commitConvention": "none"
