refactor(project): move bundler to cli (#7555)
* refactor(cli): move bundler check to cli check

* refactor(cli): move sassdoc command into cli

* refactor(project): update sassdoc commands to carbon-cli

* chore(bundler): remove bundle:scss command

* refactor(cli): move inline command to cli

* refactor(project): use carbon-cli inline instead of bundler inline

* refactor(cli): move bundle to cli and remove bundler

* chore(project): remove bundler from components

* chore(project): run yarn dedupe

* Update ci-check.js

--- a/packages/grid/package.json
+++ b/packages/grid/package.json
@@ -27,7 +27,7 @@
     "access": "public"
   },
   "scripts": {
-    "build": "yarn clean && bundler sassdoc \"scss/*.scss\" && bundler inline && bundler check \"scss/*.scss\"",
+    "build": "yarn clean && carbon-cli sassdoc \"scss/*.scss\" && carbon-cli inline && carbon-cli check \"scss/*.scss\"",
     "clean": "rimraf scss/_inlined scss/vendor"
   },
   "dependencies": {
@@ -35,7 +35,7 @@
     "@carbon/layout": "^10.16.0"
   },
   "devDependencies": {
-    "@carbon/bundler": "^10.11.0",
+    "@carbon/cli": "^10.17.0",
     "rimraf": "^3.0.0"
   },
   "eyeglass": {
