--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -27,18 +27,28 @@
     "@octokit/plugin-retry": "^2.2.0",
     "@octokit/plugin-throttling": "^2.6.0",
     "@octokit/rest": "^16.28.1",
+    "@rollup/plugin-babel": "^5.2.2",
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.1",
     "chalk": "^2.4.2",
+    "change-case": "^4.1.2",
     "child-process-promise": "^2.2.1",
     "clipboardy": "^2.1.0",
     "enquirer": "^2.3.6",
     "fast-glob": "^3.2.2",
     "fs-extra": "^8.0.1",
     "inquirer": "^6.4.1",
+    "klaw-sync": "^6.0.0",
     "lodash.template": "^4.5.0",
+    "markdown-toc": "^1.2.0",
     "prettier": "^2.2.1",
     "prettier-config-carbon": "^0.5.0",
     "progress-estimator": "^0.2.2",
     "remark": "^10.0.1",
+    "replace-in-file": "^6.1.0",
+    "rollup": "^2.36.1",
+    "sass": "^1.32.4",
+    "sassdoc": "^2.7.3",
     "yargs": "^15.1.0"
   }
 }
