--- a/packages/colors/package.json
+++ b/packages/colors/package.json
@@ -31,11 +31,11 @@
     "access": "public"
   },
   "scripts": {
-    "build": "yarn clean && bundler bundle src/index.js --name CarbonColors && node tasks/build.js && bundler check \"scss/*.scss\" && bundler sassdoc \"scss/*.scss\"",
+    "build": "yarn clean && carbon-cli bundle src/index.js --name CarbonColors && node tasks/build.js && carbon-cli check \"scss/*.scss\" && carbon-cli sassdoc \"scss/*.scss\"",
     "clean": "rimraf css es lib umd scss"
   },
   "devDependencies": {
-    "@carbon/bundler": "^10.11.0",
+    "@carbon/cli": "^10.17.0",
     "@carbon/cli-reporter": "^10.4.0",
     "@carbon/scss-generator": "^10.11.0",
     "@carbon/test-utils": "^10.13.0",
