--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -49,13 +49,13 @@
     "access": "public"
   },
   "scripts": {
-    "build": "./tools/copy-vendor-styles.sh && gulp build && bundler check \"scss/**/*.scss\" && yarn docs",
+    "build": "./tools/copy-vendor-styles.sh && gulp build && carbon-cli check \"scss/**/*.scss\" && yarn docs",
     "build-dev": "gulp build:dev",
     "build-dev-rollup": "gulp build:dev:deploy --rollup --use-custom-properties",
     "clean": "gulp clean",
     "ci-check": "sh ./tools/ci-check.sh",
     "dev": "gulp serve",
-    "docs": "bundler sassdoc \"scss{/components,/globals/grid,/globals/scss/vendor/@carbon/elements}/**/*.scss\" -i \"scss/globals/scss/vendor/@carbon/elements/**/{_inlined,vendor}/**\"",
+    "docs": "carbon-cli sassdoc \"scss{/components,/globals/grid,/globals/scss/vendor/@carbon/elements}/**/*.scss\" -i \"scss/globals/scss/vendor/@carbon/elements/**/{_inlined,vendor}/**\"",
     "format:check": "prettier --check \"**/*.{css,js,md,scss}\"",
     "prebuild": "gulp clean",
     "prepublishOnly": "yarn build",
@@ -83,7 +83,7 @@
     "@babel/preset-env": "^7.10.0",
     "@babel/preset-react": "^7.10.0",
     "@babel/runtime": "^7.10.0",
-    "@carbon/bundler": "^10.11.0",
+    "@carbon/cli": "^10.17.0",
     "@carbon/elements": "^10.25.0",
     "@carbon/icons-handlebars": "^10.23.0",
     "@carbon/icons-react": "^10.23.0",
