--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "clean": "rimraf es lib umd scss/generated",
-    "build": "yarn clean && bundler bundle src/index.js --name CarbonThemes && node tasks/build.js && bundler check \"scss/*.scss\" && bundler sassdoc \"scss/**/*.scss\""
+    "build": "yarn clean && carbon-cli bundle src/index.js --name CarbonThemes && node tasks/build.js && carbon-cli check \"scss/*.scss\" && carbon-cli sassdoc \"scss/**/*.scss\""
   },
   "dependencies": {
     "@carbon/colors": "^10.18.0",
@@ -34,6 +34,7 @@
     "color": "^3.1.2"
   },
   "devDependencies": {
+    "@carbon/cli": "^10.17.0",
     "@carbon/cli-reporter": "^10.4.0",
     "@carbon/scss-generator": "^10.11.0",
     "@carbon/test-utils": "^10.13.0",
