batch picto upload for multiple categories (#7584)
* batch picto upload for multiple categories

* fix syntax issue that was breaking build

Co-authored-by: Andrea N. Cardona <andreancardona@gmail.com>

--- a/packages/pictograms/categories.yml
+++ b/packages/pictograms/categories.yml
@@ -51,6 +51,7 @@ categories:
       - amsterdam--canal
       - amsterdam--farm
       - amsterdam--windmill
+      - atlanta
       - austin
       - bangalore
       - barcelona
@@ -61,7 +62,9 @@ categories:
       - berlin--cathedral
       - berlin--tower
       - boston--zakim-bridge
+      - budapest
       - cairo--giza-plateau
+      - canada--maple-leaf
       - chicago
       - copenhagen--planetarium
       - copenhagen--snekkja
@@ -70,6 +73,7 @@ categories:
       - dublin--brewery
       - dublin--castle
       - hamburg--philharmone
+      - kuala-lumpur
       - london
       - london--big-ben
       - madrid--cathedral
@@ -89,6 +93,7 @@ categories:
       - nyc--manhattan--02
       - nyc--statue-of-liberty
       - nyc--world-trade-center
+      - okinawa
       - paris--arc-de-triomphe
       - paris--louvre
       - paris--notre-dame
@@ -98,6 +103,7 @@ categories:
       - prague--dancing-house--02
       #    - portland
       - raleigh-nc
+      - rio-de-janeiro
       - rome
       - san-francisco
       - san-francisco--fog
@@ -121,6 +127,8 @@ categories:
       - active--server
       - api
       - automate--modular--management
+      - c--language
+      - c-plus-plus--language
       - cloud--analytics
       - cloud--assets
       - cloud--builder--professional--services
@@ -146,6 +154,7 @@ categories:
       - cloud-pak--for-multicloud-management
       - cloud-pak--for-security
       - cloud-pak--system
+      - cobol--language
       - cognos--analytics
       - condition--builder
       - construct
@@ -158,8 +167,10 @@ categories:
       - free--trial
       - global--business--services
       - global--technology--services
+      - go--language
       - hybrid--cloud
       - hybrid--cloud--services
+      - ibm--automation-platform
       - ibm--cloud
       - java
       - javascript
@@ -168,7 +179,10 @@ categories:
       - marketplace
       - mas
       - mqa
+      - php--language
       - planning--analytics
+      - pli--language
+      - r--language
       - random--samples
       - saas--enablement
       - select--range
@@ -214,6 +228,8 @@ categories:
       - chart--t-SNE
       - circle--packing
       - code--syntax
+      - dashboard
+      - data--apis
       - data--set
       - employee--insights
       - flow--chart
@@ -237,18 +253,35 @@ categories:
       - word--cloud
   - name: Data Storage
     members:
+      - accelerated-computing
       - archive
+      - business--continuity
+      - containers-and-cloud-native
       - data--backup
+      - data--privacy
       - data--processing
       - data--storage
+      - flash--storage
       - hard--drive
       - hard--drive--network
+      - hybrid--cloud--02
+      - ibm--z-and-linuxone-single-frame
+      - ibm--z-and-linuxone-multi-frame
+      - infrastructure-security
+      - it--infrastructure-software
+      - sap--hana
+      - server--operating-systems
       - server--rack
       - servers
+      - storage--area-networks
+      - storage--product
+      - tape--storage
   - name: Design and Development
     members:
       - app--developer
       - application
+      - birthday--cake
+      - cupcake
       - design-and-development--01
       - design-and-development--02
       - feedback--01
@@ -260,17 +293,25 @@ categories:
       - user--insights
       - user--interface
       - web--developer
+      - wedding--cake
       - windows
   - name: Device Interaction
     members:
       - add--device
       - augmented--reality
+      - color--contrast
+      - device--pairing
+      - flashing--content
+      - keyboard
       - mobile--add
       - mobile--chat
       - mobile--devices
       - mobile--phone
       - swipe--left
       - swipe--right
+      - text--equivalent
+      - text--input
+      - text--layout
       - touch
       - touch--gesture
       - touch--id
@@ -390,6 +431,7 @@ categories:
       - eye
       - ibm--ix
       - ibm--z
+      - ibm--z--partition
       - progress
       - world--community--grid
   - name: Industry
@@ -403,6 +445,8 @@ categories:
       - farm--02
       - farmer--01
       - farmer--02
+      - fragile
+      - keep-dry
       - oil--pump
       - oil--rig
       - power
@@ -412,9 +456,12 @@ categories:
       - satellite--dish
       - solar--field
       - solar--panel
+      - stack-limitation
       - steel
       - telecom
+      - this-side-up
       - tractor
+      - two-person-lift
       - wheat
       - wind--power
       - wine
@@ -470,6 +517,7 @@ categories:
       - sports
       - stationary--bicycle
       - tennis
+      - tree
       - yoga--01
       - yoga--02
       - yoga--03
@@ -478,6 +526,7 @@ categories:
     members:
       - americas
       - asia--australia
+      - earth
       - europe--africa
       - globe
       - globe--locations
@@ -656,6 +705,9 @@ categories:
       - systems-devops--provision
       - systems-devops--release
       - systems-devops--test
+  - name: Third-party logos
+    members:
+      - slack
   - name: Time
     members:
       - calendar
