--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/icons",
   "description": "Icons for digital and software products using the Carbon Design System",
-  "version": "10.23.0",
+  "version": "10.24.0-rc.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -38,7 +38,7 @@
     "prepublishOnly": "yarn build"
   },
   "devDependencies": {
-    "@carbon/cli": "^10.17.0",
-    "@carbon/icon-build-helpers": "^0.13.0"
+    "@carbon/cli": "^10.18.0-rc.0",
+    "@carbon/icon-build-helpers": "^0.14.0-rc.0"
   }
 }
